--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.15.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -20,7 +20,7 @@ ENDIF()
 
 add_library(cxx-bidirectional-coroutines INTERFACE)
 target_sources(cxx-bidirectional-coroutines INTERFACE ${base_path}/bidirectional-coroutine.hpp ${base_path}/nullary-coroutine-stream.hpp)
-target_include_directories(cxx-bidirectional-coroutines INTERFACE ${coroutine_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
-target_link_libraries(cxx-bidirectional-coroutines INTERFACE functional-cxx Boost::context)
+target_include_directories(cxx-bidirectional-coroutines INTERFACE ${coroutine_INCLUDE_DIR})
+target_link_libraries(cxx-bidirectional-coroutines INTERFACE functional-cxx Boost::context Boost::headers)
 
 add_subdirectory(example)
