--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/Functional-Cxx"]
 	path = deps/Functional-Cxx
-	url = git@github.com:Geopipe/Functional-Cxx.git
+	url = ../Functional-Cxx.git
